email link added

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         <div class="contact-info mb-50">
             <ul>
                 <li><strong class="contact">Contact:</strong><i class="fa-brands fa-whatsapp"></i>0305-5334510</li>
-                <li><strong class="email">Email:</strong><i class="fa-regular fa-envelope"></i>usamalatif5055@gmail.com
+                <li><strong class="email">Email:</strong><i class="fa-regular fa-envelope"></i><a
+                        href="mailto:usamalatif5055@gmail.com">usamalatif5055@gmail.com</a>
                 </li>
                 <li><strong class="linkedin">LinkedIn:</strong><a target="_blank"
                         href="https://www.linkedin.com/in/usama-latif-972b73204/"><i
                             class="fa-brands fa-linkedin linkedin-logo"></i>Click here to open LinkedIn</a></li>
-                <li><strong class="git">GitHub:</strong><a target="_blank"
-                        href="https://github.com/Usama-Latif"><i class="fa-brands fa-github git-logo"></i>Usama-Latif</a></li>
+                <li><strong class="git">GitHub:</strong><a target="_blank" href="https://github.com/Usama-Latif"><i
+                            class="fa-brands fa-github git-logo"></i>Usama-Latif</a></li>
             </ul>
         </div>
 
